--- a/mobile/src/main/res/values/navigation.xml
+++ b/mobile/src/main/res/values/navigation.xml
@@ -25,7 +25,7 @@
 	-->
 	<string-array name="navigation_url_list">
 		<item></item>
-		<item>http://www.i-salon.eu/</item>
+		<item>http://www.i-salon.eu?piattaforma=tabletandroid</item>
 		<item>http://mock.robotemplates.com/webviewapp/products.html</item>
 		<item>http://mock.robotemplates.com/webviewapp/references.html</item>
 		<item>http://mock.robotemplates.com/webviewapp/support.html</item>
