--- a/mobile/src/main/res/layout/fragment_main.xml
+++ b/mobile/src/main/res/layout/fragment_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.robotemplates.webviewapp.view.StatefulLayout
+<com.wegest.workingevolution.view.StatefulLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:id="@+id/fragment_main_stateful_layout"
@@ -22,7 +22,7 @@
 			android:layout_height="0dp"
 			android:layout_weight="1">
 
-			<com.robotemplates.webviewapp.view.RoboWebView
+			<com.wegest.workingevolution.view.RoboWebView
 				android:id="@+id/fragment_main_webview"
 				android:layout_width="match_parent"
 				android:layout_height="match_parent" />
@@ -32,4 +32,4 @@
 		<!-- AdView is added here programmatically -->
 
 	</LinearLayout>
-</com.robotemplates.webviewapp.view.StatefulLayout>
+</com.wegest.workingevolution.view.StatefulLayout>
