--- a/mobile/src/main/res/xml/analytics_app_tracker.xml
+++ b/mobile/src/main/res/xml/analytics_app_tracker.xml
@@ -10,5 +10,5 @@
 	substitute for the full length canonical Activity name in screen view hit. In order to
 	specify an alternate screen name use an <screenName> element, with the name attribute
 	specifying the canonical name, and the value the alias to use instead. -->
-	<screenName name="com.robotemplates.webviewapp.activity.MainActivity">Main Activity</screenName>
+	<screenName name="com.wegest.workingevolution.activity.MainActivity">Main Activity</screenName>
 </resources>
