--- a/mobile/src/main/res/xml/analytics_global_tracker.xml
+++ b/mobile/src/main/res/xml/analytics_global_tracker.xml
@@ -3,5 +3,5 @@
 	<string name="ga_logLevel">verbose</string> <!-- The local LogLevel for Analytics -->
 	<integer name="ga_dispatchPeriod">30</integer> <!-- How often the dispatcher should fire -->
 	<bool name="ga_dryRun">false</bool> <!-- Treat events as test events and don't send to google -->
-	<string name="com.robotemplates.webviewapp.activity.MainActivity">Main Activity</string> <!-- The screen names that will appear in reports -->
+	<string name="com.wegest.workingevolution.activity.MainActivity">Main Activity</string> <!-- The screen names that will appear in reports -->
 </resources>
